{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 15,
  "lineage": "e2b1f225-8408-dca8-09af-b418e04a522a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce2e217722089a43",
            "arn": "arn:aws:ec2:us-east-1:730335472979:elastic-ip/eipalloc-0ce2e217722089a43",
            "association_id": "eipassoc-0b361d8101565a2d8",
            "domain": "vpc",
            "id": "eipalloc-0ce2e217722089a43",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00fa944b7c3cf91b3",
            "private_dns": "ip-10-0-2-92.ec2.internal",
            "private_ip": "10.0.2.92",
            "public_dns": "ec2-54-164-39-79.compute-1.amazonaws.com",
            "public_ip": "54.164.39.79",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335472979:internet-gateway/igw-00089d19a7baa6c75",
            "id": "igw-00089d19a7baa6c75",
            "owner_id": "730335472979",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0a24f1608ff73da06"
          },
          "dependencies": [
            "aws_vpc.boda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce2e217722089a43",
            "association_id": "eipassoc-0b361d8101565a2d8",
            "connectivity_type": "public",
            "id": "nat-092036224609d55be",
            "network_interface_id": "eni-00fa944b7c3cf91b3",
            "private_ip": "10.0.2.92",
            "public_ip": "54.164.39.79",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03aa507648ee94098"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.template",
            "aws_vpc.boda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335472979:route-table/rtb-043dab0701c6acfe9",
            "id": "rtb-043dab0701c6acfe9",
            "owner_id": "730335472979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-092036224609d55be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24f1608ff73da06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.template",
            "aws_vpc.boda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335472979:route-table/rtb-0f46bf3ae1cc3d98f",
            "id": "rtb-0f46bf3ae1cc3d98f",
            "owner_id": "730335472979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00089d19a7baa6c75",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24f1608ff73da06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.boda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b03a35301958f0d",
            "route_table_id": "rtb-043dab0701c6acfe9",
            "subnet_id": "subnet-03ad09b6bb899d5e8"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.template",
            "aws_vpc.boda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092b398f2bd80c15b",
            "route_table_id": "rtb-0f46bf3ae1cc3d98f",
            "subnet_id": "subnet-03aa507648ee94098"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.template",
            "aws_vpc.boda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335472979:security-group/sg-03f958b5975360906",
            "description": "Allow SSH access from any IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f958b5975360906",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "730335472979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abdo_SG"
            },
            "tags_all": {
              "Name": "abdo_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24f1608ff73da06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.boda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "template",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335472979:subnet/subnet-03ad09b6bb899d5e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ad09b6bb899d5e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335472979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0a24f1608ff73da06"
          },
          "dependencies": [
            "aws_vpc.boda_vpc"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335472979:subnet/subnet-03aa507648ee94098",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aa507648ee94098",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335472979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0a24f1608ff73da06"
          },
          "dependencies": [
            "aws_vpc.boda_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "boda_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335472979:vpc/vpc-0a24f1608ff73da06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0885b8e2217cbd9cc",
            "default_route_table_id": "rtb-0cca7c0263d304f99",
            "default_security_group_id": "sg-09b44aeafb468d423",
            "dhcp_options_id": "dopt-07de5237b83fb9578",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a24f1608ff73da06",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cca7c0263d304f99",
            "owner_id": "730335472979",
            "tags": {
              "Name": "boda_vpc"
            },
            "tags_all": {
              "Name": "boda_vpc"
            }
          }
        }
      ]
    }
  ]
}